Adjusted button position

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <button>Change Resolution</button>
+    <div id="btn-flex">
+        <button>Change Resolution</button>
+    </div>
     <div id="container"></div>
     <script src="js/main.js"></script>
 </body>
